--- a/Project.toml
+++ b/Project.toml
@@ -6,4 +6,5 @@ ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LanguageServer = "2b0e0bc5-e4fd-59b4-8912-456d1b03d8d7"
+Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
