Added trained models

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 assets/models/v1-n-epochs=10-seed=17.bson filter=lfs diff=lfs merge=lfs -text
+assets/models/v1-n-epochs=100-seed=17.bson filter=lfs diff=lfs merge=lfs -text
