--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 assets/models/v1-n-epochs=10-seed=17.bson filter=lfs diff=lfs merge=lfs -text
 assets/models/v1-n-epochs=100-seed=17.bson filter=lfs diff=lfs merge=lfs -text
+assets/models/v1-n-epochs=10-seed=19.bson filter=lfs diff=lfs merge=lfs -text
+assets/models/v1-n-epochs=20-seed=19.bson filter=lfs diff=lfs merge=lfs -text
